force-app/main/default/objects/Team_Calendar__c/Team_Calendar__c.object-meta.xml
<CustomObject>
    <description>Stores shared calendars used by teams or groups in Salesforce.</description>
    <label>Team Calendar</label>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Calendars</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>