force-app/main/default/objects/Team_Calendar__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <type>Text</type>
    <length>20</length>
    <description>Hex color code used to display this calendar</description>
    <inlineHelpText>Enter a hex color value for this calendar, for example #1E90FF.</inlineHelpText>
    <label>Color</label>
</CustomField>