force-app/main/default/objects/Team_Calendar__c/fields/Google_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Id__c</fullName>
    <label>Google Calendar Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>