force-app/main/default/objects/Team_Calendar__c/fields/Google_Import_Calendar_Ids__c.field-meta.xml
<CustomField>
    <fullName>Google_Import_Calendar_Ids__c</fullName>
    <label>Google Import Calendar Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>