force-app/main/default/objects/Team_Calendar__c/fields/Google_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Google_Sync_Enabled__c</fullName>
    <label>Google Sync Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>