force-app/main/default/objects/Team_Calendar__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this calendar is active and available for use.</description>
    <inlineHelpText>Check this box to make the calendar available to users.</inlineHelpText>
    <label>Is Active</label>
</CustomField>